--- a/uohzey.html
+++ b/uohzey.html
@@ -14,8 +14,9 @@
 <meta head="windows-target" content="_top">
 </head>
 
-<body background="ak47.png">
-<a href="https://github.com/uohzey">访问我的github主页</a><br/>
+<body background="ak47.png"  alink="#FF0000">
+<h>我爱你们！<s>开玩笑的</s></h><br/>
+<a href="https://github.com/uohzey" >访问我的github主页</a><br/>
 </body>
 </html>
 
