--- a/trans.html
+++ b/trans.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-Hello,this page will automatically jump to yezhou's personal website after 3 seconds
+<center>Hello,this page will automatically jump to yezhou's personal website after 3 seconds</center>
 </body>
 </html>
