--- a/uohzey.html
+++ b/uohzey.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>测试</title>
 <style type="text/css">
+	@import url(style.css);
 	body{background-repeat: repeat}
 </style>
 <meta name="author" content="yezhou">
@@ -13,10 +14,11 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta head="windows-target" content="_top">
 </head>
-
-<body background="ak47.png"  alink="#FF0000">
-<h>我爱你们！<s>开玩笑的</s></h><br/>
-<a href="https://github.com/uohzey" >访问我的github主页</a><br/>
+<body>
+	<h1>我爱你们！<s>开玩笑的</s></h1><br/>
+<hr>
+<a href="https://github.com/uohzey" ><center><img src="github.gif" id="001"></center></a><br/>
 </body>
 </html>
 
+ 
