--- a/uohzey.html
+++ b/uohzey.html
@@ -15,9 +15,13 @@
 <meta head="windows-target" content="_top">
 </head>
 <body>
-	<h1>我爱你们！<s>开玩笑的</s></h1><br/>
+	<div id="headline">我爱你们！<s>开玩笑的</s></div><br/>
 <hr>
-<a href="https://github.com/uohzey" ><center><img src="github.gif" id="001"></center></a><br/>
+<a  id="git" href="https://github.com/uohzey" ><img src="github.gif" id="f001"></a><br/>
+<br/>
+<br/>
+<br/>
+<div id="footer">   版权:  @uohzey.cn</div>
 </body>
 </html>
 
