--- a/uohzey.html
+++ b/uohzey.html
@@ -12,14 +12,32 @@
 <meta name="keyname" content="叶舟,个人,网站">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="pragma" content="no-cache">
+<meta HTTP-EQUIV="Expires" content="0"> 
 <meta head="windows-target" content="_top">
 </head>
 <body>
-	<div id="headline">我爱你们！<s>开玩笑的</s></div><br/>
-<hr>
-<div id="subject_timetable"><img src="subject_timetable.png"></div>
-<div><a  id="git" href="https://github.com/uohzey" ><img src="github.gif" id="f001"></a><br/>
-<div id="footer">   版权:  @uohzey.cn</div></div>
+<div class="container">
+  <div class="head">
+	<div class="person-center">
+		<img height="60" width="60" src="profile-picture.jpg" alt="">
+		<span class="self-center">个人中心</span>	
+		<span class="perface">
+			我爱你们！<s>开玩笑的</s>
+		</span>
+	</div>
+  </div>
+  <div class="main">
+	<br/>
+	<hr>
+	<div id="subject_timetable"><img src="subject_timetable.png"></div>
+	</div>
+  <div class="footer">
+  	<div>
+  	<a  class="git" href="https://github.com/uohzey" ><img src="github.gif" id="f001"></a><br/>
+	<span class="footer-center">   版权:  @uohzey.cn</span>
+    </div>
+  </div>
+</div>
 </body>
 </html>
 
