--- a/uohzey.html
+++ b/uohzey.html
@@ -26,16 +26,17 @@
 		</span>
 	</div>
   </div>
+<hr>
   <div class="main">
-	<br/>
-	<hr>
-	<div id="subject_timetable"><img src="subject_timetable.png"></div>
-	</div>
+  	<div></div>
+  </div>
   <div class="footer">
-  	<div>
-  	<a  class="git" href="https://github.com/uohzey" ><img src="github.gif" id="f001"></a><br/>
-	<span class="footer-center">   版权:  @uohzey.cn</span>
+    <div class="footer-left"></div>
+  	<div class="footer-center">
+  	<a href="https://github.com/uohzey"><img class="github" width="60" height="60" src="github.png"></a>
+	<span class="banquan">版权:  @uohzey.cn</span>
     </div>
+    <div class="footer-right"></div>
   </div>
 </div>
 </body>
