--- a/uohzey.html
+++ b/uohzey.html
@@ -26,9 +26,16 @@
 		</span>
 	</div>
   </div>
-<hr>
+  <hr>
   <div class="main">
-  	<div></div>
+  	<div class="main-info">
+  	    <div class="avatar">
+  			<img width="90" height="90" alt="" src="head-sculpture.png">
+  		</div>
+	  <span class="nickname">uohzey</span>
+	  <img class="skull" width="20" height="20" src="male.png">
+	  <div class="site-intro">this is uohzey's personal website</div>
+  	</div> 
   </div>
   <div class="footer">
     <div class="footer-left"></div>
