--- a/uohzey.html
+++ b/uohzey.html
@@ -33,15 +33,22 @@
   			<img width="90" height="90" alt="" src="head-sculpture.png">
   		</div>
 	  <span class="nickname">uohzey</span>
-	  <img class="skull" width="20" height="20" src="male.png">
+	  <img class="male" width="20" height="20" src="male.png">
 	  <div class="site-intro">this is uohzey's personal website</div>
+  	</div>
+  	<div class="link">
+  		<ul>
+  			<li>1</li>
+  			<li>2</li>
+  			<li>3</li>
+  		</ul>
   	</div> 
   </div>
   <div class="footer">
     <div class="footer-left"></div>
   	<div class="footer-center">
-  	<a href="https://github.com/uohzey"><img class="github" width="60" height="60" src="github.png"></a>
-	<span class="banquan">版权:  @uohzey.cn</span>
+  	<a href="https://github.com/uohzey"><img class="github" width="40" height="40" src="github.png"></a>
+	<div class="banquan">版权:  @uohzey.cn</div>
     </div>
     <div class="footer-right"></div>
   </div>
