--- a/uohzey.html
+++ b/uohzey.html
@@ -40,7 +40,12 @@
   		<ul>
   			<li>1</li>
   			<li>2</li>
-  			<li>3</li>
+  			<li><a href="#">我的学习</a>
+  				<ul>
+  					<li><a href="#">网页项目</a></li>
+  					<li><a href="#">爬虫项目</a></li>
+  				</ul>
+  			</li>
   		</ul>
   	</div> 
   </div>
