--- a/uohzey.html
+++ b/uohzey.html
@@ -48,6 +48,29 @@
   			</li>
   		</ul>
   	</div> 
+  	<div class="main-content">
+  		<div class="main-content-left">
+  			<div class="left-top">
+  				<div class="person-info">
+  					<div class="person-info-left">
+  						<p>居住地</p>
+  						<br>
+  						<p>联系方式</p>
+  						<br>
+  						<p>邮箱</p>
+  					</div>
+  					<div class="person-info-right">
+  						<p>浙江丽水</p>
+  						<br>
+  						<p>13093628805</p>
+  						<br>
+  						<p>420709076@qq.com</p>
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  		<div class="main-content-right"></div>
+  	</div>
   </div>
   <div class="footer">
     <div class="footer-left"></div>
